Removed custom scrollbar. Set thead to fixed.

--- a/scss/stylesheet.scss
+++ b/scss/stylesheet.scss
@@ -1,7 +1,3 @@
-$scroll-bar-width: 0.6rem;
-$thead-hight: 10px;
-
-
 body, html, .container, .col {
     background-color: #1d2c40;
     height: 100%;
@@ -82,18 +78,4 @@ tr {
     width: 100%;
     display: inline-table;
     table-layout: fixed;
-}
-
-
-//Scroll Bar CSS
-tbody::-webkit-scrollbar
-{
-	width: $scroll-bar-width;  /* for vertical scrollbars */
-	height: 4px; /* for horizontal scrollbars */
-}
-
-tbody::-webkit-scrollbar-thumb
-{
-  	border-radius: 50px 50px 50px 50px;
-  	background-color: #ffffff;
 }
